--- a/CameraPropertiesHolder.ui
+++ b/CameraPropertiesHolder.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>358</width>
-    <height>538</height>
+    <width>383</width>
+    <height>590</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,10 +45,34 @@ background-color:rgb(59,58,57);
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>356</width>
-        <height>536</height>
+        <width>381</width>
+        <height>588</height>
        </rect>
       </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <property name="spacing">
+        <number>0</number>
+       </property>
+       <item row="0" column="0">
+        <layout class="QGridLayout" name="scrollAreaLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+        </layout>
+       </item>
+      </layout>
      </widget>
     </widget>
    </item>
